<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    android:layout_marginBottom="@dimen/list_views_margin"
    android:layout_marginLeft="@dimen/list_views_margin"
    android:layout_marginRight="@dimen/list_views_margin"
    android:background="?attr/selectableItemBackground"
    android:descendantFocusability="blocksDescendants"
    android:foreground="?attr/selectableItemBackground"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageList"
            android:layout_width="@dimen/image_product_list_width"
            android:layout_height="match_parent"
            android:contentDescription="@string/descr_image_product"
            android:src="@drawable/ic_no_photo" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/list_views_margin"
            android:layout_marginRight="@dimen/list_views_margin"
            android:layout_weight="2"
            android:orientation="vertical"
            android:padding="@dimen/activity_margin">

            <TextView
                android:id="@+id/name"
                style="@style/ListProductNameStyle"
                tools:text="@string/tools_name" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/main_background" />

            <TextView
                android:id="@+id/price"
                style="@style/ListPriceStyle"
                tools:text="@string/tools_price" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                tools:text="@string/tools_list_quantity" />

            <Button
                android:id="@+id/sale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/list_label_button_sale" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/button_item_list"
            style="@style/ListDotsIconStyle"
            android:contentDescription="@string/descr_list_DotsButton" />

    </LinearLayout>

</android.support.v7.widget.CardView>
